# recommendation-system

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 10b84788f662_initial_schema.py  82eb786f925d_add_language_code_to_faq_and_qna.py  c6d680d20b38_phase1_core_learning_schema.py  f1021e811a66_phase_2_create_knowledge_video_.py
src/app/: main.py
src/app/api/: chat.py
src/app/chat/: context.py  formatter.py  intents.py  router.py
src/app/chat/handlers/: clarification.py  knowledge.py  recommendation.py
src/app/chat/prompts/: intent_classifier.txt
src/app/db/: session.py
src/app/db/models/: __init__.py  category.py  chat_message.py  chat_record.py  faq.py  lecture.py  lecture_prerequisite.py  lecture_student.py  permission_group.py  permission_group_user.py  qna.py  user.py  video.py  video_student.py
src/app/db/seed/: phase1_seed.sql  phase2_seed.sql
src/app/dto/: dto.py
src/app/llm/: intent_classifier.py  ollama_client.py  response_formatter.py
src/app/services/: conversation_summary_service.py  dto.py  recommendation_service.py  video_recommendation_service.py
tests/: conftest.py  test_recommendation_service.py
ui/: app.py
