[tool.poetry]
name = "recommendation-system"
version = "0.1.0"
description = "Recommendation System Backend"
authors = ["rp"]
package-mode = false

packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
streamlit = "^1.52.2"
requests = "^2.32.5"
ollama = "^0.6.1"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
